fixes for client

--- a/index.html
+++ b/index.html
@@ -25,18 +25,15 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#about-expert">Об эксперте</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#my-projects">Мои проекты</a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#my_expertize">Моя экспертность</a>
                 </li>
-              
                 <li class="nav-item">
-                    <a class="nav-link" href="#reviews">Отзывы</a>
+                      <a class="nav-link" href="#my-projects">Мои проекты</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#me_mentor">Я - наставник</a>
+                    <a class="nav-link" href="#reviews">Отзывы</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -60,18 +57,17 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Автор многочисленных статей по практике управления финансами</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Автор популярного учебника "Экономика XXI" и художественного романа «Лише секунда»</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Преподаватель авторских финансовых курсов в Киево-Могилянской бизнес-школе, бизнес-тренер и консультант</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Популяризатор экономических знаний и экономической культуры</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Автор 3 курсов на платформе Prometheus, на которые суммарно зарегистрировались более 80 000 человек.</li>
-                  <!--          <li><img src="img/sec_1/ok.svg" alt="ok">Проводил обучение специалистов для таких крупных украинских и международных компаний как SoftServe, Global Logic, Milkiland, Группа компаний Фокстрот, Efes и многих других</li> -->
+                           <li><img src="img/sec_1/ok.svg" alt="ok">Проводил обучение специалистов для таких крупных украинских и международных компаний как SoftServe, Global Logic, Milkiland, Группа компаний Фокстрот, Efes и многих других</li>
                         </ul>
                     </div>
 
                 </div>
-                <div class="col-md-4">
+
                     <div class="img_wrapp">
                         <img src="img/sec_1/gerasshenko.png" alt="SE">
                     </div>
-                </div>
+
             </div>
         </div>
     </section>
@@ -117,9 +113,9 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                <div class="col col-md-6 left-col">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                   <div class="img_wrapp">
+                       <img src="img/sec_profile/gerasshenko.png" alt="SE">
+                   </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хотите решать финансовые задачи, опираясь на четкие знание и опыт?</h2>
@@ -165,7 +161,7 @@
                         <p class="card_subtitle">Онлайн-курс</p>
                         <h4 class="card_title">Финансовый директор</h4>
                         <div class="b-card-body">
-                            <p>Курс для собственников бизнеса, руководителей компаний, бухгалтеров и руководителей отделов</p>
+                            <p>Курс по управлению финансами для собственников бизнеса, руководителей компаний, бухгалтеров и руководителей отделов</p>
                         </div>
                         <div class="dropdown-divider"></div>
                         <div class="b-card-footer">
@@ -683,14 +679,11 @@
                 <img src="img/sec_your_mentor/title_label.svg" alt="title_label">
                 <h2>Хочешь взять под контроль финансовые потоки своей компании?</h2>
             </div>
-            <div class="row">
-                <div class="col-md-6 img_wrapp">
-                    <img src="img/sec_your_mentor/gerasshenko.png" alt="gerasshenko">
-                </div>
-                <div class="col-md-6">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+            <div class="row row justify-content-center">
+                <div class="col-md-6 ">
+                  <div class="col-md-6 img_wrapp">
+                      <img src="img/sec_your_mentor/gerasshenko.png" alt="gerasshenko">
+                  </div>
                     <a href="#" class="btn btn-success">Да хочу!</a>
                 </div>
             </div>
