--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+            <!--    <li class="nav-item active">
                     <a class="nav-link" href="#course_programm">Програма курса</a>
                 </li>
                 <li class="nav-item">
@@ -33,7 +33,19 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
-                </li>
+                </li> -->
+                <li class="nav-item active">
+                        <a class="nav-link" href="#about_trainer">О тренере</a>
+                  </li>
+                  <li class="nav-item active">
+                          <a class="nav-link" href="#course_programm">Програма курса</a>
+                  </li>
+                  <li class="nav-item active">
+                            <a class="nav-link" href="#course_auditory">Аудитория курса</a>
+                  </li>
+                  <li class="nav-item active">
+                          <a class="nav-link" href="#results">Результаты</a>
+                  </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
@@ -551,7 +563,7 @@
             <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <div class="sec_title">
                 <img src="img/sec_your_result/title_label.svg" alt="title_label">
-                <h2>Наши преимущества</h2>
+                <h2>Результаты после обучения на курсе</h2>
                 <p>Вы получаете весь набор возможностей в одном месте:</p>
             </div>
             <div class="row">
@@ -659,7 +671,7 @@
             <img alt="" class="abs_pic cup" src="img/abs_pic/cup.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Принять участие в курсе: Эмоциональный интеллект в бизнесе</h2>
+                <h2>Что входит в программу обучения</h2>
                 <p>Инвестиции в свое обучение и развитие сейчас - всегда <br> окупается в сотни раз и приносит уникальные возможности!</p>
             </div>
             <div class="card">
