fixes for client

--- a/index.html
+++ b/index.html
@@ -27,22 +27,20 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#about-expert">Об эксперте</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#my-projects">Мои проекты</a>
-            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="#my_expertize">Моя экспертность</a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link" href="#my-projects">Мои проекты</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#my_articles">Мои статьи</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#reviews">Отзывы</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#me_mentor">Я - наставник</a>
-            </li>
+
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
@@ -112,18 +110,10 @@
             <div class="col-lg-7">
                 <div class="card">
                     <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                    <p>Привет! <br> Меня зовут ДЭН ДУБРАВИН. Эксперт по личным и семейным финансам. Руковожу "Академией
-                        финансового благополучия". Провожу консультации, прямые эфиры и тренинги. </p>
-                    <p>Помогаю клиентам увеличить доход и эффективно им управлять.</p>
-                    <p>Я всю жизнь в образовании и предпринимательстве. Для меня применение знаний на практике, как
-                        выдох после вдоха. Считаю, что в финансах теория без практики бесполезна. Поэтому мое обучение
-                        нацелено на применение с целью увидеть результат.</p>
-                    <p>Считаю, что каждый человек, при сильном желании с работающими инструментами, способен создать
-                        жизнь, о которой мечтает.</p>
-                    <p>От финансового состояния зависят все сферы жизни. К счастливой жизни, легче прийти с финансовым
-                        благополучии. А помогать другим легче, когда сам не нуждаешься в помощи.</p>
-                    <p>В богатом обществе средний показатель радости, счастья и удовлетворенности жизни значительно
-                        выше. Поэтому, я хочу чтобы вы стали финансово обеспеченным.</p>
+                    <p>Все начинается в детстве. Сначала ребенок понимает, что нытье, истерики и обиды помогают манипулировать родителями, друзьями, учителями. К 30 годам такое поведение уже въедается в деловую жизнь и мешает: строить карьеру, добиваться успехов, планировать развитие, расти профессионально. </p>
+                    <p>Для эффективной работы в компании, а тем более на руководящей должности, важно понимать, что движет людьми, что их мотивирует, почему они делают то, что делают и так, как делают.</p>
+                    <p>Я досконально изучил тему эмоционального  интеллекта, через многие испытания прошел сам и хочу поделиться своими открытиями и выводами с теми, кому эмоции мешают в деловых отношениях.</p>
+                    <p>Вы не сможете влиять на эмоции и отношение других людей, пока не совладаете со своими эмоциями.</p>
                 </div>
             </div>
         </div>
@@ -175,13 +165,30 @@
                     <p class="card_subtitle">30-дневный онлайн-курс</p>
                     <h4 class="card_title">Эмоциональный интеллект в бизнесе</h4>
                     <div class="b-card-body">
+                      <div class="date_wrap">
+                        <div class="item">
+                            <span>Старт</span>
+                            <div class="date">
+                                <div>18</div>
+                                <span>ноябрь</span>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <span>Финиш</span>
+                            <div class="date">
+                                <div>18</div>
+                                <span>декабрь</span>
+                            </div>
+                        </div>
+                        </div>
                         <ul class="list">
                             <li>Развитие эмоционального интеллекта у сотрудников и руководителей компании - это
                                 гарантированное повышение эффективности бизнес-процессов и результатов деятельности
                                 компании.
                             </li>
                         </ul>
-                    </div>
+
+                  </div>
                     <div class="dropdown-divider"></div>
                     <div class="b-card-footer">
                         <div class="counter">7 модулей. 24 видео.</div>
@@ -289,17 +296,17 @@
                 вы можете прочитать ниже.</p>
         </div>
         <div class="tag_list">
-            <span>Менеджмент</span>
-            <span>Энергия</span>
-            <span>HR</span>
-            <span>Кратный рост</span>
-            <span>Бизнес</span>
-            <span>Карьера</span>
-            <span>IT</span>
-            <span>Финансы</span>
+            <span>Мышление</span>
+            <span>Эмоции</span>
+            <span>Эмоциональный интеллект</span>
+            <span>Саморазвитие</span>
+            <span>Переговоры</span>
             <span>Нетворкинг</span>
-            <span>Инвестиции</span>
-            <span>Успех</span>
+            <span>“Кризисный менеждмент</span>
+            <span>Управление</span>
+            <span>Тайм-менеджмент</span>
+            <span>Личная эффективность</span>
+            <span>Командная работа</span>
         </div>
         <div class="row justify-content-between">
             <div class="col-md-6 card_wrapp">
@@ -323,7 +330,7 @@
                         <span class="date">7 мая 2019 г. ДЭН ДУБРАВИН</span>
                         <div class="hr"></div>
                         <span class="tags">Мечта, Дисциплина, Управление, Менеджмент </span>
-                        <a href="https://5sfer.com/24421-chto-ostanavlivayet-bol-shinstvo-lyudey-na-puti-k-finansovoy-sostoyatel-nosti.html"
+                        <a href="https://5sfer.com/11932-chuvstvo-viny-7-shagov-k-svobode.html"
                            class="btn btn-blue">Читать полностью</a>
                     </div>
                 </div>
@@ -336,7 +343,7 @@
                         <span class="date">12 мая 2019 г. ДЭН ДУБРАВИН</span>
                         <div class="hr"></div>
                         <span class="tags">Позитив, Дисциплина, Менеджмент</span>
-                        <a href="https://5sfer.com/24361-kak-vyyti-iz-lyuboy-slozhnoy-situatsii.html"
+                        <a href="https://5sfer.com/17140-kak-ochistit-emocionalnyj-osadok-sedonskij-metod.html"
                            class="btn btn-blue">Читать полностью</a>
                     </div>
                 </div>
@@ -349,7 +356,7 @@
                         <span class="date">7 мая 2019 г. ДЭН ДУБРАВИН</span>
                         <div class="hr"></div>
                         <span class="tags">Энергия,Успех, Менеджмент</span>
-                        <a href="https://5sfer.com/24404-4-sostavlyayushcheye-finansovogo-blagopoluchiya-ili-o-chem-govoryat-bogatyye.html"
+                        <a href="https://5sfer.com/11447-5-sposobov-izbavitsya-ot-gordyni.html"
                            class="btn btn-blue">Читать полностью</a>
                     </div>
                 </div>
@@ -362,7 +369,7 @@
                         <span class="date">7 мая 2019 г. ДЭН ДУБРАВИН</span>
                         <div class="hr"></div>
                         <span class="tags">Энергия,Успех, Менеджмент</span>
-                        <a href="https://5sfer.com/24404-4-sostavlyayushcheye-finansovogo-blagopoluchiya-ili-o-chem-govoryat-bogatyye.html"
+                        <a href="https://5sfer.com/14777-kak-pravilno-okazyvat-emocionalnuyu-podderzhku.html"
                            class="btn btn-blue">Читать полностью</a>
                     </div>
                 </div>
@@ -453,7 +460,7 @@
     </div>
 </section>
 <!-- / sec_success_stories -->
-
+<!--
 <section id="me_mentor" class="sec sec_your_mentor">
     <div class="container">
 
@@ -480,7 +487,7 @@
         </div>
     </div>
 </section>
-
+-->
 <!-- sec_12 --> <!--
 <section class="sec sec_12">
     <div class="container">
