--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#course_programm">Програма курса</a>
+                    <a class="nav-link" href="#my_expertize">О тренере</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#my_expertize">Моя экспертность</a>
+                    <a class="nav-link" href="#course_programm">Программа курса</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#reviews">Отзывы</a>
+                    <a class="nav-link" href="#course_audience">Аудитория курса</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
+                    <a class="nav-link" href="#result">Результаты</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -185,7 +185,7 @@
             </div>
             <div class="row">
                 <div class="col-md-8">
-                    <p class="undertitle">Преподаватель финансов Киево-Могилянской бизнес-школы, консультант, топ-менеджер<br> - финансовый директор Юг Контракт,<br> предприниматель, популяризатор<br> экономических знаний</p>
+                    <p class="undertitle">Преподаватель финансов Киево-Могилянской<br> бизнес-школы, консультант, топ-менеджер -<br> финансовый директор Юг Контракт.</p>
                     <div class="card">
                         <ul>
                             <li><img src="img/sec_1/ok.svg" alt="ok">15 лет опыта в сфере управления финансами</li>
@@ -393,7 +393,7 @@
     <!-- / sec_programm -->
 
     <!-- / sec_tabs -->
-    <section class="sec sec_tabs">
+    <section id="course_audience" class="sec sec_tabs">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -535,12 +535,13 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
     <!-- / sec_tabs -->
 
     <!-- sec_your_result -->
-    <section class="sec sec_your_result">
+    <section id="result" class="sec sec_your_result">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
@@ -549,7 +550,7 @@
             <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <div class="sec_title">
                 <img src="img/sec_your_result/title_label.svg" alt="title_label">
-                <h2>Наши преимущества</h2>
+                <h2>Результаты после обучения на курсе</h2>
                 <p>Вы получаете весь набор возможностей в одном месте:</p>
             </div>
             <div class="row">
@@ -754,14 +755,17 @@
             <img alt="" class="abs_pic cup" src="img/abs_pic/cup.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
-                <h2>Стоимость за участие в курсе “Финансовый директор”</h2>
+
+                <h2>Что входит в программу курса “Финансовый директор”</h2>
                 <p>Инвестиции в свое обучение и развитие сейчас - всегда <br> окупается в сотни раз и приносит уникальные возможности!</p>
             </div>
             <div class="card">
                 <div class="media align-items-center">
                     <img class="media-image" src="img/sec_cost/ic_1.svg" alt="Generic placeholder image">
                     <div class="media-body">
+
                         <h4 class="card_title">Финансовый директор</h4>
+
                         <div class="b-card-body">
                             <ul class="list">
                                 <li>8 уроков в прямом эфире</li>
@@ -771,7 +775,22 @@
                                 <li>Презентации по теоретическому материалу и рабочие тетради</li>
                             </ul>
                             <div class="right">
-
+                              <div class="date_wrap">
+                                  <div class="item">
+                                      <span>Старт</span>
+                                      <div class="date">
+                                          <div>19</div>
+                                          <span>ноябрь</span>
+                                      </div>
+                                  </div>
+                                  <div class="item">
+                                      <span>Финиш</span>
+                                      <div class="date">
+                                          <div>17</div>
+                                          <span>декабрь</span>
+                                      </div>
+                                  </div>
+                              </div>
                                 <a href="" class="btn btn-success">Принять участие</a>
                             </div>
                         </div>
