--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
                 </li> -->
                 <li class="nav-item active">
-                        <a class="nav-link" href="#about_trainer">О тренере</a>
+                        <a class="nav-link" href="#my_expertize">О тренере</a>
                   </li>
                   <li class="nav-item active">
                           <a class="nav-link" href="#course_programm">Програма курса</a>
@@ -424,7 +424,7 @@
     <!-- / sec_programm -->
 
     <!-- / sec_tabs -->
-    <section class="sec sec_tabs">
+    <section id="course_auditory" class="sec sec_tabs">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -554,7 +554,7 @@
     <!-- / sec_tabs -->
 
     <!-- sec_your_result -->
-    <section class="sec sec_your_result">
+    <section id="results" class="sec sec_your_result">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
