--- a/index.html
+++ b/index.html
@@ -9,96 +9,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header><a href="#" class="logo"><img src="img/logo.svg" alt="logo"></a><p>Инновация отличает лидера от догоняющего</p></header>
     <section class="mentor">
         <div class="container">
-            <h1 class="title with_before">Хочешь я стану твоим личным наставником, помогу развиваться и достигать поставленных целей? </h1>
-            <div class="video_and_list">
-                <div class="video_with_btn">
-                    <div class="video_wrapp"><iframe src="https://www.youtube.com/embed/ygoIrQQJVv0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                    <a href="" class="btn">Да, хочу!</a>
+            <img src="img/abs_el_1.svg" class="abs_el abs_el_1">
+            <img src="img/abs_el_2.svg" class="abs_el abs_el_2">
+            <img src="img/abs_el_3.svg" class="abs_el abs_el_3">
+
+            <img src="img/line_before_title.svg" alt="isaac-lg" class="line_before_title">
+            <div class="header_with_img">
+                <div class="left">
+                    <img src="img/isaac.png" alt="isaac">
                 </div>
-                <ul class="list">
-                    <li>Ты начнешь эффективнее развиваться</li>
-                    <li>Поставишь цели и начнешь их достигать</li>
-                    <li>Станешь частью сильного окружения на закрытой платформе</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <section class="why_you_need_mentor">
-        <div class="container">
-            <h1 class="title with_before">Почему тебе нужно подключить виртуальный наставник?</h1>
-            <div class="card_list">
-                <div class="card">
-                    <img src="img/why_you_need_mentor/1.svg" alt="why_you_need_mentor">
-                    <p>Ты будешь получать от меня ценные обучающие видео, статьи, бесплатные и платные курсы</p>
-                </div>
-                <div class="card">
-                    <img src="img/why_you_need_mentor/2.svg" alt="why_you_need_mentor">
-                    <p>Каждую неделю я буду делиться с вами своими осознаниями, ценными знаниями и инсайтами</p>
-                </div>
-                <div class="card">
-                    <img src="img/why_you_need_mentor/3.svg" alt="why_you_need_mentor">
-                    <p>Ты получишь возможность многократно расти и развиваться в окружении единомышленников</p>
-                </div>
-                <div class="card">
-                    <img src="img/why_you_need_mentor/4.svg" alt="why_you_need_mentor">
-                    <p>Я буду приглашать тебя на свои мероприятия, которые релевантны твоим целям и направлениям развития</p>
+                <div class="right">
+                    <h5>ИЦХАК ПИНТОСЕВИЧ</h5>
+                    <h1 class="title with_before">Я стану твоим личным наставником!</h1>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="are_you_ready">
-        <div class="container">
-            <h1 class="title with_before">Ты готов изменить себя и свою жизнь?</h1>
-            <p class="under_title">Если твой ответ "ДА" - я не просто стану твоим виртуальным наставником, но также открою доступ к уникальной платформе SmartExpert, которую создал для твоего развития!</p>
-            <div class="row_list">
-                <div class="row">
-                    <div class="col">
-                        <div class="slide_bg"><img src="img/are_you_ready/1.jpg" alt="are_you_ready"></div>
-                    </div>
-                    <div class="col col_txt">
-                        <h2>Эффективное обучение и освоение новых навыков </h2>
-                        <p>Я подготовил для тебя уникальные курсы, интересную систему соревновательного обучения, рейтинг участников и возможность выиграть призы за лучшие результаты</p>
-                    </div>
-                </div>
-                <div class="row row_reverse">
-                    <div class="col">
-                        <div class="slide_bg"><img src="img/are_you_ready/2.jpg" alt="are_you_ready"></div>
-                    </div>
-                    <div class="col col_txt">
-                        <h2>Нетворкинг - получай помощь и помогай окружающим </h2>
-                        <p>Находи лучших специалистов, консультируй, получай ускорение в решении поставленных задач. Общайся, дружи, помогай, мотивируй других и получай поддержку в ответ</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="slide_bg"><img src="img/are_you_ready/3.jpg" alt="are_you_ready"></div>
-                    </div>
-                    <div class="col col_txt">
-                        <h2>Качественная поддержка и мотивация коучей</h2>
-                        <p>Профессиональные коучи всегда помогут справиться с ограничениями и барьерами, поддержат и дадут "волшебный пинок" во время прохождения образовательного курса.</p>
-                    </div>
-                </div>
-                <div class="row row_reverse">
-                    <div class="col">
-                        <div class="slide_bg"><img src="img/are_you_ready/4.jpg" alt="are_you_ready"></div>
-                    </div>
-                    <div class="col col_txt">
-                        <h2>Элементы контент маркетинга и создания личного бренда </h2>
-                        <p>Получай возможность писать статьи по своей специализации, делись ими в закрытой социальной сети. И что важно - твоя статья может отобраться для публикации на портале 5СФЕР, где ее увидят более 300 000 тысяч человек. </p>
-                    </div>
-                </div>
+            <p class="choose">Выбери как я смогу с тобой общаться:</p>
+            <div class="socials_wrapp">
+                <a href="#" class="soc_item"><img src="img/tg_bot.svg" alt="tg_bot"><span>Telegram</span></a>
+                <a href="#" class="soc_item"><img src="img/vb_bot.svg" alt="vb_bot"><span>Viber</span></a>
+                <a href="#" class="soc_item"><img src="img/fb_bot.svg" alt="fb_bot"><span>Facebook</span></a>
+                <a href="#" class="soc_item"><img src="img/ic_vk.svg" alt="ic_vk"><span>Vkontakte</span></a>
             </div>
+            <img src="img/isaac-lg.png" alt="isaac-lg" class="isaac_lg">
         </div>
     </section>
-    <section class="connect_mentor">
-        <div class="container">
-            <h1 class="title with_before">Я предлагаю тебе начать развиваться, активно обучаться и окружить себя сильными людьми!</h1>
-            <p class="under_title">И я лично готов тебе в этом помочь!</p>
-            <a href="#" class="btn btn-blue">Подключить Наставника</a>
-        </div>
-    </section>
+
+
 </body>
 </html>
