--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </div>
             <p class="choose">Выбери как я смогу с тобой общаться:</p>
             <div class="socials_wrapp">
-                <a href="#" class="soc_item"><img src="img/tg_bot.svg" alt="tg_bot"><span>Telegram</span></a>
-                <a href="#" class="soc_item"><img src="img/vb_bot.svg" alt="vb_bot"><span>Viber</span></a>
-                <a href="#" class="soc_item"><img src="img/fb_bot.svg" alt="fb_bot"><span>Facebook</span></a>
-                <a href="#" class="soc_item"><img src="img/ic_vk.svg" alt="ic_vk"><span>Vkontakte</span></a>
+                <a href="https://tlg.name/synergy_isaac_bot" class="soc_item"><img src="img/tg_bot.svg" alt="tg_bot"><span>Telegram</span></a>
+                <a href="https://is.gd/bMEp7m" class="soc_item"><img src="img/vb_bot.svg" alt="vb_bot"><span>Viber</span></a>
+                <a href="https://m.me/122449275821367" class="soc_item"><img src="img/fb_bot.svg" alt="fb_bot"><span>Facebook</span></a>
+                <a href="https://vk.me/public187109758" class="soc_item"><img src="img/ic_vk.svg" alt="ic_vk"><span>Vkontakte</span></a>
             </div>
             <img src="img/isaac-lg.png" alt="isaac-lg" class="isaac_lg">
         </div>
